# strava-client-rs

./: CODE_OF_CONDUCT.md  Cargo.toml  README.MD  README.md
.github/workflows/: ci.yml
src/: configfile.rs  lib.rs  oauth.rs
src/api/: activities.rs  athlete.rs  club.rs  gear.rs  helpers.rs  mod.rs  oauth.rs
src/models/: activites.rs  activities.rs  athelete.rs  athlete.rs  clubs.rs  gear.rs  mod.rs
src/util/: auth_config.rs  mod.rs  redirect.rs
