[package]
name = "strava-client-rs"
version = "0.2.4"
edition = "2021"
authors = ["Quenten Griffith <qgriffith@gmail.com>"]
description = "Strava API Client lib"
license = "MIT"
keywords = ["strava", "client", "api"]
readme = "README.md"
repository = "https://github.com/qgriffith/strava-client-rs"
homepage = "https://github.com/qgriffith/strava-client-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"]}
tiny_http = "0.12.0"
url = "2.2.2"
random-string = "1.1.0"
log = "0.4.25"
serde_json = "1.0.135"
oauth2 = "4.4.2"
